Fix layout jump

--- a/src/styles/components/Layout.scss
+++ b/src/styles/components/Layout.scss
@@ -1,6 +1,5 @@
 .Layout {
-  height: 100%;
-  max-height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
